# diplom_bulletin_board

./: .env.sample  .flake8  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
.pg_data/base/1/: 2619  2696  2840  2841  pg_internal.init
.pg_data/base/16384/: 1247  1249  1259  1259_fsm  13444  16385  16386  16390  16391  16393  16394  16397  16399  16401  16402  16405  16407  16415  16419  16421  16428  16442  16443  16447  16452  16453  16455  16457  16461  16469  16482  16484  16496  16498  16504  16518  16519  16559  16562  2224  (+29 more)
.pg_data/base/4/: 2619
.pg_data/base/5/: pg_internal.init
.pg_data/global/: 1260  1262  2671  2672  2676  pg_control  pg_internal.init
.pg_data/pg_stat/: pgstat.stat
.pg_data/pg_xact/: 0000
announcements/: admin.py  filters.py  models.py  paginators.py  serializers.py  urls.py  views.py
announcements/fixtures/: announcements.json  review.json
announcements/migrations/: 0001_initial.py
announcements/tests/: conftest.py  tests_announcement.py  tests_review.py
announcements/validators/: forbidden_words.txt  validators.py
config/: settings.py  urls.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/fixtures/: customsUser.json
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/tests/: conftest.py  tests_user.py
