[project]
name = "diplom-bulletin-board"
version = "0.1.0"
description = ""
authors = [
    {name = "alexandra kashina",email = "kashin159@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.4,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "black (>=24.10.0,<25.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-filter (>=24.3,<25.0)",
    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
    "ipython (>=8.31.0,<9.0.0)",
    "coverage (>=7.6.10,<8.0.0)",
    "isort (>=5.13.2,<6.0.0)",
    "drf-yasg (>=1.21.8,<2.0.0)",
    "stripe (>=11.4.1,<12.0.0)",
    "pillow (>=11.1.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
